Bug#1158 uda inputs fields are too narrow (#1162)
* Create new input fields

* Change width of input field

--- a/oscm-portal/WebContent/css/portal.css
+++ b/oscm-portal/WebContent/css/portal.css
@@ -2435,4 +2435,5 @@ table.dataTable > tbody > td:hover {
 
 .display-flex {
   display: flex;
+  width: fit-content;
 }
